# biomedal_workcell

./: .pre-commit-config.yaml  README.md  compose.yaml
applications/Autoprotocol/: liquid_protocol_2.py  workflow_with_notes.yaml
applications/Autoprotocol/old_files/: pyproject.toml
applications/Autoprotocol/old_files/protocols/: ot2_2.py  ot2_3.py
applications/Autoprotocol/old_files/workflows/: test.workflow.yaml  workflow (2).yaml:Zone.Identifier  workflow.yaml  workflow.yaml:Zone.Identifier  workflow_old.yaml  workflow_pcr.yaml
applications/Autoprotocol/protocols/: liquid_protocol_2.py  liquid_protocol_2.yaml
applications/Autoprotocol/src/: experiment_app.py
applications/Autoprotocol/workflows/: workflow_with_notes.yaml
applications/DEMO/src/: demo_app.py  helper_functions.py
applications/DEMO/workflows/: demo_wf.yaml
applications/GYORGY/: cherry_picking_ORIGINAL.py
applications/GYORGY/protocols/: move_A4_C1_temp_mod.py  move_C1_A4_temp_mod.py  move_from_staging_A4_C1.yaml  move_from_staging_A4_D1.yaml  move_tips_test.py  (+3 more)
applications/NIDHI/: README.md
applications/NIDHI_one_plate/: README.md
docker/: wei.compose.yaml
startup_scripts/: start_BMG_VANTAstar.py  start_Hidex_Sense.py  start_biometra_thermocycler_96.py  start_inheco_incubators.py
startup_scripts/automatic_data_transfer/: auto_file_transfer.py
startup_scripts/bash_scripts/: start_all_windows_nodes.sh
startup_scripts/python_scripts/: start_BMG_VANTAstar.py  start_Hidex_Sense.py  start_biometra_thermocycler_96.py  start_inheco_incubators.py
workcells/: bio446.workcell.yaml
(+199 files in other folders)
